codex-rs/tui2/src/chatwidget/snapshots/codex_tui2__chatwidget__tests__approvals_selection_popup@windows_degraded.snap
---
source: tui2/src/chatwidget/tests.rs
assertion_line: 1773
expression: popup
---
  Select Approval Mode

› 1. Read Only (current)           Requires approval to edit files and run
                                   commands.
  2. Agent (non-elevated sandbox)  Read and edit files, and run commands.
  3. Agent (full access)           Codex can edit files outside this workspace
                                   and run commands with network access.
                                   Exercise caution when using.

  To upgrade to the elevated sandbox, run /setup-elevated-sandbox.
  Press enter to confirm or esc to go back
