codex-rs/tui2/src/chatwidget/snapshots/codex_tui2__chatwidget__tests__chat_small_idle_h1.snap
---
source: tui2/src/chatwidget/tests.rs
# tui2/src/chatwidget/snapshots/codex_tui2__chatwidget__tests__chat_small_idle_h1.snap
expression: terminal.backend()
---
"                                        "
