codex-rs/tui2/src/chatwidget/snapshots/codex_tui2__chatwidget__tests__chat_small_idle_h2.snap
---
source: tui2/src/chatwidget/tests.rs
expression: terminal.backend()
# tui2/src/chatwidget/snapshots/codex_tui2__chatwidget__tests__chat_small_idle_h2.snap
---
"                                        "
"                                        "
